objects/Chaser_Activity__c.object
<CustomObject>
    <description>Tracks the chaser interactions with a property</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>Lookup to case chaser activity is associated with</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Chaser Activities</relationshipLabel>
        <relationshipName>Chaser_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chaser_Type__c</fullName>
        <description>Tracks the type of chaser interaction</description>
        <label>Chaser Type</label>
        <picklist>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>Completed Date/Time</description>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of the chaser in minutes</description>
        <formula>(Completed_Date_Time__c -  CreatedDate) * 1440</formula>
        <inlineHelpText>Duration of the chaser in minutes</inlineHelpText>
        <label>Duration (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Contacted__c</fullName>
        <description>Tracks how the person was contact via the chaser</description>
        <label>How Contacted</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Chaser Activity</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Chaser Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chaser Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>